--- a/css/root.css
+++ b/css/root.css
@@ -3,6 +3,10 @@
 /* font-family: 'Roboto', sans-serif; */
 :root {
     --font-family:'Roboto', sans-serif;
+    --fs-1:48px;
+    --fs-2:36px;
+    --fs-3:24px;
+    --fs-4:18px;
     --blue-white:#E5E7EB;
     --green-white:#F9FAF8;
     --dark-blue:#1F2937;
