--- a/css/typography.css
+++ b/css/typography.css
@@ -5,7 +5,7 @@
 }
 
 .hero-text {
-    font-size: 48px;
+    font-size: var(--fs-1);
     font-family: var(--font-family);
     font-weight: 900;
     color: var(--green-white);
@@ -15,7 +15,7 @@
 
 .sub-text,
 .nav-link-text {
-    font-size: 18px;
+    font-size: var(--fs-4);
     font-family: var(--font-family);
     font-weight: 300;
     color: var(--blue-white);
@@ -23,14 +23,14 @@
 }
 
 .card-title {
-    font-size: 24px;
+    font-size:var(--fs-3);
     font-family: var(--font-family);
     font-weight: 500;
     color: var(--dark-blue)
 }
 
 .info-header-text {
-    font-size: 36px;
+    font-size: var(--fs-2);
     font-family: var(--font-family);
     font-weight: 900;
     color: var(--dark-blue);
@@ -47,11 +47,11 @@ p {
 
 .card-title {
     padding: 15px;
-    font-size: 20px;
+    font-size: var(--fs-3);
 }
 
 .card-text {
-    font-size: 18px;
+    font-size: var(--fs-4);
     font-family: var(--font-family);
     font-weight: 300;
     color: var(--dark-blue);
@@ -59,7 +59,7 @@ p {
 }
 
 .testimonial-text {
-    font-size: 2.25rem;
+    font-size: var(--fs-2);
     font-family: var(--font-family);
     font-weight: 300;
     color: var(--dark-blue);
@@ -91,5 +91,5 @@ p {
 
 .fa-apple,
 .fa-google-play {
-    font-size: 1.5rem;
+    font-size: var(--fs-3);
 }
