--- a/css/component/_card.css
+++ b/css/component/_card.css
@@ -10,6 +10,11 @@
 
 .card-item {
     width: 15rem;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    border-bottom-right-radius: 30px;
+    border-top-left-radius: 30px;
+    box-shadow: 3px 3px 10px var(--dark-blue);
 }
 
 .card-img-container {
@@ -21,4 +26,10 @@
     width: 100%;
     border-radius: 20px;
     border: 1px solid var(--light-blue);
+    margin-top: 1rem;
+}
+
+.card-img:hover {
+    transform: scale(1.2);
+    box-shadow: 3px 3px 10px var(--dark-blue);
 }
