--- a/css/component/_nav.css
+++ b/css/component/_nav.css
@@ -1,24 +1,38 @@
 @import './root.css';
 
-.card-group {
-    max-width: 1200px;
+.nav {
+    width: 100vw;
+    position: fixed;
+    top: -1px;
+    z-index: 10;
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--dark-blue);
+}
+
+.nav-bar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 5rem;
+    width: 25rem;
+    justify-content: space-evenly;
+    line-height: 50px;
 }
 
-.card-item {
-    width: 15rem;
+.nav-link {
+    padding: 10px 0 10px 0;
+    color: var(--blue-white);
 }
 
-.card-img-container {
-    width: 12rem;
+.nav-link:hover {
+    transform: scale(1.1);
+}
+
+.logo-container {
+    width: 150px;
+    padding-top: 10px;
+}
+
+.logo-img {
+    width: 150px;
     margin: auto;
-}
-
-.card-img {
-    width: 100%;
-    border-radius: 20px;
-    border: 1px solid var(--light-blue);
 }
