--- a/css/layout/_layout_home_page.css
+++ b/css/layout/_layout_home_page.css
@@ -1,60 +1,6 @@
 @import './root.css';
 
-/* global */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-
-a {
-    color: var(--dark-blue);
-    cursor: pointer;
-}
-
-header {
-    background-color: var(--dark-blue);
-}
-
 /* home page */
-.logo-container {
-    width: 150px;
-    padding-top: 10px;
-}
-
-.logo-img {
-    width: 150px;
-    margin: auto;
-}
-
-.nav {
-    width: 100vw;
-    position: fixed;
-    top: -1px;
-    z-index: 10;
-    display: flex;
-    justify-content: space-around;
-    background-color: var(--dark-blue);
-}
-
-.nav-bar {
-    display: flex;
-    flex-direction: row;
-    width: 25rem;
-    justify-content: space-evenly;
-    line-height: 50px;
-}
-
-.nav-link {
-    padding: 10px 0 10px 0;
-    color: var(--blue-white);
-}
-
-.nav-link:hover {
-    transform: scale(1.1);
-}
 
 .hero-container {
     background-color: var(--dark-blue);
@@ -68,6 +14,11 @@ header {
 
 .hero-text-container {
     padding: 5rem;
+}
+
+.hero-text-container button {
+    float: left;
+    margin-top: 3rem;
 }
 
 .hero-img-container {
@@ -120,53 +71,4 @@ header {
     justify-content: space-around;
     align-items: center;
     margin: 5rem auto;
-}
-
-/* sign up page */
-.signup-body {
-    background: url(../images/cat-img.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.signup-container {
-    height: 55vh;
-    max-width: 1200px;
-    margin: 8rem auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--blue-white);
-    opacity: 0.9;
-}
-
-.signup-form-container {
-    min-width: 400px;
-    height: 50vh;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: var(--blue-white);
-    border-top-left-radius: 80px;
-    border-top: 5px solid var(--dark-blue);
-    border-bottom-right-radius: 80px;
-    border-bottom: 5px solid var(--dark-blue);
-    opacity: 0.9;
-}
-
-.signup-form {
-    min-width: 300px;
-    line-height: 24px;
-    border-radius: 15px;
-    border: 1px solid var(--dark-blue)
-}
-
-/* footer */
-.footer {
-    background-color: var(--dark-blue);
-    line-height: 4rem;
-    color: var(--blue-white);
 }
