--- a/css/layout/_layout_signup_page.css
+++ b/css/layout/_layout_signup_page.css
@@ -1,130 +1,8 @@
 @import './root.css';
 
-/* global */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-
-a {
-    color: var(--dark-blue);
-    cursor: pointer;
-}
-
-header {
-    background-color: var(--dark-blue);
-}
-
-/* home page */
-.logo-container {
-    width: 150px;
-    padding-top: 10px;
-}
-
-.logo-img {
-    width: 150px;
-    margin: auto;
-}
-
-.nav {
-    width: 100vw;
-    position: fixed;
-    top: -1px;
-    z-index: 10;
-    display: flex;
-    justify-content: space-around;
-    background-color: var(--dark-blue);
-}
-
-.nav-bar {
-    display: flex;
-    flex-direction: row;
-    width: 25rem;
-    justify-content: space-evenly;
-    line-height: 50px;
-}
-
-.nav-link {
-    padding: 10px 0 10px 0;
-    color: var(--blue-white);
-}
-
-.nav-link:hover {
-    transform: scale(1.1);
-}
-
-.hero-container {
-    background-color: var(--dark-blue);
-    height: 50vh;
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.hero-text-container {
-    padding: 5rem;
-}
-
-.hero-img-container {
-    filter: drop-shadow(5px 5px 0px white);
-}
-
-.hero-img {
-    width: 30rem;
-}
-
-.plan-container {
-    display: flex;
-    justify-content: center;
-}
-
-.plan {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.plan-title {
-    padding: 35px;
-    margin: 3rem 0 3rem 0;
-}
-
-
-
-.testimonial-container {
-    max-width: 1200px;
-    background-color: var(--blue-white);
-    height: 20rem;
-    display: flex;
-    flex-direction: column;
-    margin: 5rem auto;
-}
-
-.author {
-    text-align: end;
-    margin: 0 8rem 3rem 0;
-}
-
-.cta-container {
-    background-color: var(--light-blue);
-    max-width: 1200px;
-    height: 10rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 5rem auto;
-}
-
 /* sign up page */
 .signup-body {
-    background: url(../images/cat-img.jpg);
+    background: url(../../images/cat-img.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -137,24 +15,31 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--blue-white);
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
 .signup-form-container {
     min-width: 400px;
-    height: 50vh;
+    height: 60vh;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--blue-white);
-    border-top-left-radius: 80px;
+    background-color: var(--green-white);
+    border-top-left-radius: 50px;
     border-top: 5px solid var(--dark-blue);
-    border-bottom-right-radius: 80px;
+    border-bottom-right-radius: 50px;
     border-bottom: 5px solid var(--dark-blue);
-    opacity: 0.9;
+    box-shadow: 5px 5px 20px var(--blue-white);
+}
+
+.signup-form-container:first-child {
+    padding-top: 3rem;
+}
+
+.signup-container:hover {
+    opacity: 1;
 }
 
 .signup-form {
@@ -162,11 +47,4 @@ header {
     line-height: 24px;
     border-radius: 15px;
     border: 1px solid var(--dark-blue)
-}
-
-/* footer */
-.footer {
-    background-color: var(--dark-blue);
-    line-height: 4rem;
-    color: var(--blue-white);
 }
