--- a/css/manifest.css
+++ b/css/manifest.css
@@ -1,10 +1,10 @@
-@import './base/_reset.css';
-@import './base/_typography.css';
-@import './component/_button.css';
-@import './component/_card.css';
-@import './component/_nav.css';
-@import './component/_footer.css';
-@import './layout/_layout_blog_page.css';
-@import './layout/_layout_signup_page.css';
-@import './layout/_layout_home_page.css';
-@import './base/_responsive.css';
+@import url('./base/_reset.css');
+@import url('./base/_typography.css');
+@import url('./component/_button.css');
+@import url('./component/_card.css');
+@import url('./component/_nav.css');
+@import url('./component/_footer.css');
+@import url('./layout/_layout_blog_page.css');
+@import url('./layout/_layout_signup_page.css');
+@import url('./layout/_layout_home_page.css');
+@import url('./base/_responsive.css');
