--- a/css/layout/layout-blog-page.css
+++ b/css/layout/layout-blog-page.css
@@ -44,8 +44,9 @@
 }
 
 .side-bar li, a {
+    line-height:24;
     text-align: start;
-    padding: 10px;
+    padding: 5px;
     font-weight: 500;
     cursor: pointer;
 }
