--- a/css/layout/layout-blog-page.css
+++ b/css/layout/layout-blog-page.css
@@ -5,22 +5,34 @@
 }
 
 .container {
-    display: grid;
-    grid-template-areas: 'main main main main aside';
+    display: flex;
+    flex-direction: row;
     max-width: 1200px;
-    min-height: 82vh;
     margin: auto;
     text-align: start;
+    margin-top: 8rem;
 }
 
 .blog-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-self: center;
 }
 
-.blog-header h1 {
+.blog-header {
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-img-container {
+    width: 90%;
+    padding: 1rem;
+}
+
+.blog-img {
+    width: 100%;
+}
+
+.blog-title {
     color: var(--dark-blue);
     font-size: var(--fs-2);
     text-align: start;
@@ -34,8 +46,25 @@
     padding: 30px;
 }
 
+.featured-link {
+    line-height: 30px;
+    text-align: start;
+    padding: 5px;
+    cursor: pointer;
+    border-bottom: 1px solid gray;
+    margin-top: 1rem;
+}
+
+.featured-link:hover {
+    transform: scale(1.08);
+}
+
+.featured-link-text:hover {
+    color: var(--light-blue);
+}
+
 .side-bar {
-    margin-top: 8rem;
+    margin-top: 6rem;
     padding: 25px;
     display: flex;
     flex-direction: column;
@@ -43,21 +72,8 @@
     border-left: 1px solid gray;
 }
 
-.side-bar li, a {
-    line-height:24;
-    text-align: start;
-    padding: 5px;
-    font-weight: 500;
-    cursor: pointer;
-}
-
-.side-bar li:hover {
-    color: var(--light-blue);
-    transform: scale(1.05);
-}
-
 .search-bar-container {
-    width: 60%;
+    width: 230px;
     display: flex;
     justify-content: space-between;
     margin-bottom: 3rem;
@@ -67,7 +83,7 @@
 
 .search-bar {
     line-height: 30px;
-    min-width: 180px;
+    width: 90%;
     border-radius: 15px;
     border: none;
     box-shadow: 2px 2px 10px var(--dark-blue);
