--- a/css/base/responsive.css
+++ b/css/base/responsive.css
@@ -4,7 +4,7 @@
     /* home page  */
     .hero-container {
         position: relative;
-        height: 125vh;
+        height: 105vh;
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-around;
@@ -12,13 +12,11 @@
     }
 
     .hero-img {
-        width: 80vw;
-        margin-top: 10rem;
-        margin-bottom: -5rem;
+        width: 100%;
     }
 
     .nav-bar {
-        width: 15rem;
+        width: 100%;
     }
 
     .plan {
@@ -43,7 +41,8 @@
 
     .testimonial-text {
         font-size: 2rem;
-        width: 25rem;
+        width: 100%;
+        padding: 0 20px 0 20px;
     }
 
     .cta-container {
@@ -247,12 +246,17 @@
 @media only screen and (max-width: 1280px) and (orientation: landscape) {
     .hero-container {
         position: relative;
-        top: 150px;
-        height: 160vh;
+        top: 0px;
+        height: 100vh;
+        width: 100%;
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: row;
         justify-content: space-around;
         align-items: center;
+    }
+    .hero-text-container{
+        transform: scale(0.7);
+        padding: 0;
     }
 
     .card-group {
@@ -263,24 +267,17 @@
     }
 
     .hero-img {
-        margin-top: -5rem;
-        width: 80vw;
-    }
-
-    header {
-        height: 180vh;
-    }
-
-    .blog-header {
-        height: auto;
-    }
-
-    .signup-header {
-        height: auto;
+        width: 100%;
     }
 
     .container {
         display: flex;
         flex-wrap: wrap;
+    }
+    .signup-form-container{
+        min-height: 600px;
+    }
+    .signup-container{
+        height: max-content;
     }
 }
