--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -19,7 +19,10 @@
     font-family: var(--font-family);
     font-weight: 300;
     color: var(--blue-white);
-    padding: 5px;
+    padding: 15px;
+}
+div .sub-text{
+    text-align: start;
 }
 
 .card-title {
