--- a/css/layout/layout-signup-page.css
+++ b/css/layout/layout-signup-page.css
@@ -3,7 +3,7 @@
 /* sign up page */
 .signup-body {
     background: url(../../images/cat-img.jpg);
-    background-size: cover;
+    background-size:auto
     background-repeat: no-repeat;
     background-position: center;
 }
