--- a/css/layout/layout-signup-page.css
+++ b/css/layout/layout-signup-page.css
@@ -1,13 +1,12 @@
 @import '../base/root.css';
 
 /* sign up page */
-.signup-body {
-    background: url(../../images/cat-img.jpg);
-    background-size:auto
-    background-repeat: no-repeat;
-    background-position: center;
+.signup-body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-
 .signup-container {
     height: max-content;
     max-width: 1200px;
